# TrackMate

./: .gitignore  README.md
backend/: CMakeLists.txt  Dockerfile  docker-compose.yaml
class_diagrams/: backend.mmd
documentation/: branch-guidelines.md
trackmate/: pubspec.yaml
trackmate/ios/Runner.xcodeproj/: project.pbxproj
